Fixing some style path stuff.

--- a/bwti/follow/templates/index.html
+++ b/bwti/follow/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Brood War Twitter Initiative</title>
     <meta name="viewport" content="width=device-width, i1nitial-scale=1" http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" ype="text/css" href="{% static 'style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
 </head>
 
   <body bgcolor="grey">
